Preventing scroll and body overflow while the modal is open

--- a/components/Modal/modal.module.scss
+++ b/components/Modal/modal.module.scss
@@ -1,6 +1,15 @@
 @import "../../styles/Mixins.scss";
 @import "../../styles/Variables.scss";
 
+.overflow_hidden {
+  overflow: hidden;
+  width: calc(100% - 17px); //for chrome/safari
+  width: -moz-calc(100% - 16px); //for firefox
+  width: -ms-calc(
+    100% - XXpx
+  ); // where "XX" equals the width of the scrollbar in IE)
+}
+
 .modal {
   position: fixed;
   top: 0;
